Enhance mobile experience with loading screen adjustments and incompatible device messaging

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       referrerpolicy="no-referrer"
     ></script>
   </head>
-  <body>
+  <body id="IncompatibleForMobile">
     <div
       class="loading-overlay w-100 h-100 position-fixed top-0 start-0 z-3"
       id="loading-screen"
@@ -73,7 +73,8 @@
       id="Mobile-loading-screen"
     >
       <span
-        class="fs-5 fs-md-3 text-center mx-3"
+      id="IncompatibleForMobileText"
+        class="text-center mx-3 fs-4 text-wrap text-white"
         style="
           font-family: 'MinecraftiaRegular', sans-serif;
           text-shadow: 2px 2px 4px #000000;
