Refactor loading screen text and enhance mobile experience with updated messaging and responsive styles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div
         class="vstack gap-3 d-flex justify-content-center align-items-center h-100 position-relative"
       >
-        <span class="loading-text fs-3 px-1"> Loading... </span>
+        <span class="loading-text fs-3 px-1">Loading...</span>
         <span class="px-auto"></span>
         <div
           class="px-1 position-absolute bottom-0 start-50 translate-middle-x mb-4"
@@ -68,7 +68,7 @@
     </div>
 
     <div
-      class="loading-overlay d-flex justify-content-center align-items-center w-100 h-100 position-fixed top-0 start-0 d-block d-md-none"
+      class="loading-overlay d-flex justify-content-center align-items-center w-100 h-100 w-auto h-auto position-fixed top-0 start-0 d-block d-md-none"
       style="z-index: 9999"
       id="Mobile-loading-screen"
     >
