--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div
-      class="loading-overlay d-flex justify-content-center align-items-center w-100 h-100 w-auto h-auto position-fixed top-0 start-0 d-block d-md-none"
+      class="loading-overlay d-flex justify-content-center align-items-center w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none"
       style="z-index: 9999"
       id="Mobile-loading-screen"
     >
