Enhance mobile loading screen styles with padding and box-sizing adjustments for better visibility

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     <div
       class="loading-overlay d-flex justify-content-center align-items-center w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none"
+      style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
       style="z-index: 9999"
       id="Mobile-loading-screen"
     >
