--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
     </div>
 
     <div
-      class="loading-overlay d-flex justify-content-center align-items-center w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none"
-      style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
-      style="z-index: 9999"
+      class="loading-overlay w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none"
+        style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
       id="Mobile-loading-screen"
     >
       <span
