Enhance mobile loading screen styles with flexbox for improved alignment and responsiveness

--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
       </div>
     </div>
 
-    <div
-      class="loading-overlay w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none"
+    <div class="loading-overlay w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none d-flex justify-content-center align-items-center"
         style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
       id="Mobile-loading-screen"
     >
       <span
       id="IncompatibleForMobileText"
-        class="text-center mx-3 fs-4 text-wrap text-white"
+        class="text-center mx-3"
         style="
           font-family: 'MinecraftiaRegular', sans-serif;
           text-shadow: 2px 2px 4px #000000;
           font-weight: bold;
+          font-size: clamp(1.5rem, 2.5vw, 2rem);
         "
       >
         Please use a larger screen for the best experience.
