Refactor mobile loading screen styles for consistent height and improved padding

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <div class="loading-overlay w-100 vh-100 position-fixed top-0 start-0 d-block d-md-none d-flex justify-content-center align-items-center"
+    <div class="loading-overlay w-100 h-100 position-fixed top-0 start-0 d-block d-md-none d-flex justify-content-center align-items-center"
         style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
       id="Mobile-loading-screen"
     >
