Enhance mobile loading screen styles with dark background and improved text shadow for better visibility

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <div class="loading-overlay w-100 h-100 position-fixed top-0 start-0 d-block d-md-none d-flex justify-content-center align-items-center"
+    <div class="loading-overlay bg-dark w-100 h-100 position-fixed top-0 start-0 d-block d-md-none d-flex justify-content-center align-items-center"
         style="z-index: 9999; padding: 2rem; box-sizing: border-box;"
       id="Mobile-loading-screen"
     >
@@ -76,7 +76,7 @@
         class="text-center mx-3"
         style="
           font-family: 'MinecraftiaRegular', sans-serif;
-          text-shadow: 2px 2px 4px #000000;
+          text-shadow: 2px 2px 4px #ffffff;
           font-weight: bold;
           font-size: clamp(1.5rem, 2.5vw, 2rem);
         "
