Enhance text shadow on mobile loading screen for improved visibility

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         class="text-center mx-3"
         style="
           font-family: 'MinecraftiaRegular', sans-serif;
-          text-shadow: 2px 2px 4px #ffffff;
+          text-shadow: 2px 2px 4px #ffffff3e;
           font-weight: bold;
           font-size: clamp(1.5rem, 2.5vw, 2rem);
         "
