Update About Me section with dynamic data from JSON; enhance tooltip functionality and improve skill descriptions for better user experience.

--- a/index.html
+++ b/index.html
@@ -130,37 +130,17 @@
 
             <div class="mt-5 pt-5 d-flex flex-column align-items-center">
               <span class="MC-Btn mb-2">
-                <a
-                  class="MC-Btn-text btn-Clicksound"
-                  id="AboutMeBtn"
-                  data-tooltip
-                  data-title="About Me"
-                  data-body="Open the About Me dialog with more information."
-                >
+                <a class="MC-Btn-text btn-Clicksound" id="AboutMeBtn">
                   About Me
                 </a>
               </span>
 
               <span class="MC-Btn mb-2 btn-Clicksound">
-                <a
-                  class="MC-Btn-text"
-                  data-tooltip
-                  data-title="Projects"
-                  data-body="View my projects and demos."
-                >
-                  Projects
-                </a>
+                <a class="MC-Btn-text"> Projects </a>
               </span>
 
               <span class="MC-Btn btn-Clicksound">
-                <a
-                  class="MC-Btn-text"
-                  data-tooltip
-                  data-title="Contact"
-                  data-body="Get in touch via email or social links."
-                >
-                  Contact Me
-                </a>
+                <a class="MC-Btn-text"> Contact Me </a>
               </span>
 
               <div class="hstack w-50 justify-content-center mt-2 mx-auto">
@@ -488,10 +468,6 @@
                                     </td>
                                   </tr>
                                 </table>
-                                <small class="text-muted">
-                                  Note: This is a sample text. Actual
-                                  information will be updated soon.
-                                </small>
                               </div>
                             </div>
                           </div>
@@ -763,7 +739,7 @@
                                   text-align: justify;
                                 "
                               >
-                                <div class="hstack">
+                                <div class="hstack position-fixed gap-0 px-3 z-2">
                                   <div
                                     class="box-1 flex-fill d-flex align-items-center justify-content-center"
                                   >
@@ -834,8 +810,8 @@
                                         class="p-1"
                                         id="skill-item-3"
                                         data-tooltip
-                                        data-title="MySQL"
-                                        data-body="Skilled in database design and management."
+                                        data-title="Database Management"
+                                        data-body="Skilled in MySQL for efficient data storage and retrieval."
                                       />
                                     </div>
                                   </div>
@@ -848,11 +824,15 @@
                                       style="height: 48px; width: 48px"
                                     >
                                       <img
-                                        src=""
-                                        alt=""
+                                        src="https://minecraft.wiki/images/Bookshelf_JE4_BE2.png"
+                                        alt="Bookshelf"
                                         style="width: 48px; height: 48px"
-                                        class="p-1 d-none"
+                                        class="p-1"
                                         id="skill-item-4"
+                                        ,
+                                        data-tooltip
+                                        data-title="Frameworks & Libraries"
+                                        data-body="Familiar with various frameworks and libraries to enhance web development."
                                       />
                                     </div>
                                   </div>
@@ -949,19 +929,41 @@
                                       style="height: 48px; width: 48px"
                                     >
                                       <img
-                                        src=""
-                                        alt=""
-                                        style="width: 48px; height: 48px"
-                                        class="p-1 d-none"
+                                        src="https://minecraft.wiki/images/Barrier_%28held%29_JE1_BE1.png?49087&20190811152525"
+                                        alt="Barrier"
+                                        style="width: 50px; height: 50px"
+                                        class="p-1"
                                         id="skill-item-9"
+                                        data-tooltip
+                                        data-title="Clear Slot"
+                                        data-body="Clear Crafting Slot"
                                       />
-                                      <div
-                                        class="mc-tooltip d-none"
-                                        id="skill-tooltip-9"
-                                      ></div>
                                     </div>
                                   </div>
                                 </div>
+                                <span style="height: 56px; display: block; width: 555px; background-color: #c8c8c8;" class="position-fixed z-1">
+                                  &nbsp;
+                                </span>
+                                <p class="mt-5 pt-4 mb-0">
+                                  <span
+                                    class="fw-bold"
+                                    style="
+                                      font-family: 'MinecraftiaRegular',
+                                        sans-serif;
+                                    "
+                                    id="legend"
+                                  ></span>
+                                </p>
+                                <p>
+                                  <small
+                                    style="
+                                      font-family: 'MinecraftiaRegular',
+                                        sans-serif;
+                                        font-size: 12px;
+                                    "
+                                    id="description"
+                                  ></small>
+                                </p>
                               </div>
                             </div>
                           </div>
