--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                         class="btn-close btn-close-Custom btn-Clicksound position-absolute top-0 end-0 m-2 z-3"
                         data-bs-dismiss="modal"
                         aria-label="Close"
+                        id="closePopupBtn"
                       ></button>
                     </div>
                     <div
