Enhance service worker functionality; add loading screen control, dynamic splash text, and copyright display. Update offline page content for clarity and improve tooltip styles in CSS.

--- a/offline.html
+++ b/offline.html
@@ -5,7 +5,7 @@
     <title>Offline</title>
   </head>
   <body style="font-family: sans-serif; text-align: center; padding: 2rem">
-    <h1>📴 You're offline</h1>
-    <p>Please check your internet connection.</p>
+    <h1>You are offline</h1>
+    <p>It seems you are not connected to the internet. Please check your connection and try again.</p>
   </body>
 </html>
