--- a/index.html
+++ b/index.html
@@ -43,105 +43,77 @@
   </head>
   <body>
     <div id="PanoramaContainer" class="w-100 vh-100 position-relative overflow-hidden">
-    <div id="LoadingScreen" class="loading-overlay d-flex flex-column justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 z-1">
+      <div id="LoadingScreen" class="loading-overlay d-flex flex-column justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 z-1">
         <h1 id="LoadingText" class="text-white mb-3">Loading...</h1>
         <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center text-white pb-2 text-wrap d-none" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem">
           Stuck on loading? Try refreshing the page or check back later!
         </p>
       </div>
-      <div id="MainContent" class="position-absolute vh-100 w-100 z-0">
-        <div class="container">
-          <div class="vstack d-flex align-items-center pt-5">
-            <div class="container-fluid d-flex justify-content-center mb-5">
-              <span class="MainLOGO position-relative">
-                <div class="splashtext text-center">
-                  <p id="MCsplashText"></p>
-                </div>
-              </span>
-            </div>
-            <div class="container pt-4">
-              <div class="vstack d-flex align-items-center">
-                <div class="mc-btn pb-5 mb-2">
-                  <p class="mb-0">About Me</p>
-                </div>
-                <div class="mc-btn py-4">
-                  <p class="mb-0">Projects</p>
-                </div>
-                <div class="mc-btn pt-5 mt-2">
-                  <p class="mb-0">Contact</p>
-                </div>
-              </div>
-              <div class="hstack d-flex justify-content-center align-items-center mt-2">
-                <div class="me-2 mc-btn-sm d-none d-md-block" style="height: 45px; width: 45px; min-width: 45px; max-width: 45px">
-                  <a
-                    class="MC-Btn-text-sm Icon-GitHub"
-                    href="https://github.com/Unknownplanet40"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="GitHub"
-                    data-tooltip
-                    data-title="GitHub"
-                    data-body="Visit my GitHub profile."
-                  ></a>
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="me-5 mc-btn-md" style="height: 45px; width: 200px; min-width: 200px; max-width: 200px">
-                    <p>Projects</p>
+      <div class="tooltips-Container position-relative">
+        <div class="tooltip position-fixed" id="tooltip" style="display: none; pointer-events: none; z-index: 1070; top: 0; left: 0">
+          <div class="tooltip-header text-warning" id="tooltip-header">Title</div>
+          <div class="tooltip-body text-secondary" id="tooltip-body">Body</div>
+        </div>
+        <div id="MainContent" class="position-absolute vh-100 w-100 z-0">
+          <div class="container">
+            <div class="vstack d-flex align-items-center pt-5">
+              <div class="container-fluid d-flex justify-content-center mb-5">
+                <span class="MainLOGO position-relative">
+                  <div class="splashtext text-center">
+                    <p id="MCsplashText"></p>
                   </div>
-                  <div class="ms-3 mc-btn-md" style="height: 45px; width: 200px; min-width: 200px; max-width: 200px">
-                    <p>Contact</p>
+                </span>
+              </div>
+              <div class="container-fluid pt-5">
+                <div class="vstack d-flex align-items-center">
+                  <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
+                    <p class="mb-0">About Me</p>
+                  </div>
+                  <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
+                    <p class="mb-0">Projects</p>
+                  </div>
+                  <div class="n-mc-btn text-center MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
+                    <p class="mb-0">Contact</p>
                   </div>
                 </div>
-                <div class="ms-2 mc-btn-sm d-none d-md-block" style="height: 45px; width: 45px; min-width: 45px; max-width: 45px">
-                  <a
-                    class="MC-Btn-text-sm Icon-Resume"
-                    href="./Assets/resume.pdf"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="Resume"
-                    data-tooltip
-                    data-title="Resume"
-                    data-body="Download or view my resume."
-                  ></a>
+                <div class="hstack d-flex justify-content-center align-items-center mt-1">
+                  <div class="me-2 mc-btn-sm d-none d-md-block GH-Click MC-BTN-CLICK" style="height: 45px; width: 45px; max-width: 45px" data-tooltip data-title="GitHub" data-body="Visit my GitHub profile.">
+                    <a class="MC-Btn-text-sm Icon-GitHub"></a>
+                  </div>
+                  <div class="hstack d-flex justify-content-between" style="width: 100%; max-width: 460px; min-width: none 400px">
+                    <div class="mc-btn-md MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
+                      <p class="my-2">Facebook</p>
+                    </div>
+                    <div class="mc-btn-md MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
+                      <p class="my-2">LinkedIn</p>
+                    </div>
+                  </div>
+                  <div class="ms-2 mc-btn-sm d-none d-md-block R-Click MC-BTN-CLICK" style="height: 45px; width: 45px; min-width: 45px; max-width: 45px" data-tooltip data-title="Resume" data-body="Download or view my resume.">
+                    <a class="MC-Btn-text-sm Icon-Resume"></a>
+                  </div>
                 </div>
-              </div>
-              <div class="hstack d-flex justify-content-center align-items-center mt-2 d-md-none">
-                <div class="me-5 mc-btn-md" style="height: 45px; width: 200px; min-width: 200px; max-width: 200px">
-                  <a
-                    class="MC-Btn-text-sm Icon-GitHub Icon-GitHub-down"
-                    href="https://github.com/Unknownplanet40"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="GitHub"
-                    data-tooltip
-                    data-title="GitHub"
-                    data-body="Visit my GitHub profile."
-                  ><p>GitHub</p></a>
-                </div>
-                <div class="ms-3 mc-btn-md" style="height: 45px; width: 200px; min-width: 200px; max-width: 200px">
-                  <a
-                    class="MC-Btn-text-sm Icon-Resume Icon-Resume-down"
-                    href="./Assets/resume.pdf"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="Resume"
-                    data-tooltip
-                    data-title="Resume"
-                    data-body="Download or view my resume."
-                  ><p>Resume</p></a>
+                <div class="hstack d-flex justify-content-center align-items-center mt-1 d-md-none">
+                  <div class="hstack d-flex justify-content-between" style="width: 100%; max-width: 460px; min-width: none 400px">
+                    <div class="mc-btn-md GH-Click MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px" data-tooltip data-title="GitHub" data-body="Visit my GitHub profile.">
+                      <a class="Icon-GitHub Icon-GitHub-down"><p>GitHub</p></a>
+                    </div>
+                    <div class="mc-btn-md R-Click MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px" data-tooltip data-title="Resume" data-body="Download or view my resume.">
+                      <a class="Icon-Resume Icon-Resume-down"><p>Resume</p></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="position-absolute bottom-0 start-50 translate-middle-x mb-3 w-100 d-none d-md-block">
-          <span class="text-white" style="font-family: 'MinecraftiaRegular', sans-serif; text-shadow: 2px 2px 4px #000000">
-            <div class="hstack">
-              <span class="mx-3" id="portfolio-version"></span>
-              <span class="mx-auto"></span>
-              <span class="mx-3">Copyright © <span id="current-year"></span> <span id="owner-name">Owner Name</span></span>
-            </div>
-          </span>
+          <div class="position-absolute bottom-0 start-50 translate-middle-x mb-3 w-100 d-none d-md-block">
+            <span class="text-white" style="font-family: 'MinecraftiaRegular', sans-serif; text-shadow: 2px 2px 4px #000000">
+              <div class="hstack">
+                <span class="mx-3" id="portfolio-version"></span>
+                <span class="mx-auto"></span>
+                <span class="mx-3">Copyright © <span id="current-year"></span> <span id="owner-name">Owner Name</span></span>
+              </div>
+            </span>
+          </div>
         </div>
       </div>
     </div>
