Add Facebook and LinkedIn button functionality; update loading screen message for clarity

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div id="PanoramaContainer" class="w-100 vh-100 position-relative overflow-hidden">
       <div id="LoadingScreen" class="loading-overlay d-flex flex-column justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 z-1">
         <h1 id="LoadingText" class="text-white mb-3">Loading...</h1>
-        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center text-white pb-2 text-wrap d-none" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem">
-          Stuck on loading? Try refreshing the page or check back later!
+        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center text-white pb-2 text-wrap d-none px-5" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem">
+          It's taking longer than usual to load the portfolio. This may be due to your internet connection or device performance.
         </p>
       </div>
       <div class="tooltips-Container position-relative">
@@ -81,10 +81,10 @@
                     <a class="MC-Btn-text-sm Icon-GitHub"></a>
                   </div>
                   <div class="hstack d-flex justify-content-between" style="width: 100%; max-width: 460px; min-width: none 400px">
-                    <div class="mc-btn-md MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
+                    <div class="mc-btn-md MC-BTN-CLICK FB-Click" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
                       <p class="my-2">Facebook</p>
                     </div>
-                    <div class="mc-btn-md MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
+                    <div class="mc-btn-md MC-BTN-CLICK LI-Click" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px">
                       <p class="my-2">LinkedIn</p>
                     </div>
                   </div>
