--- a/index.html
+++ b/index.html
@@ -54,6 +54,68 @@
           <div class="tooltip-header text-warning" id="tooltip-header">Title</div>
           <div class="tooltip-body text-secondary" id="tooltip-body">Body</div>
         </div>
+        <div class="modalsContainer">
+          <div class="modal fade overflow-hidden" id="Modal-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="Modal-1Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-xl modal-fullscreen-md-down modal-dialog-scrollable">
+              <div class="modal-content rounded-1 custom-box">
+                <div class="modal-header border-bottom-0">
+                  <h5 class="modal-title" id="Modal-1-HL"></h5>
+                  <script>
+                    // dispaly cuurent modal size
+                    function displayModalSize() {
+                      const modal = document.getElementById("Modal-1");
+                      const modalLabel = document.getElementById("Modal-1-HL");
+                      function updateModalSize() {
+                        let size = "";
+                        if (window.innerWidth < 576) {
+                          size = " (XS)";
+                        } else if (window.innerWidth >= 576 && window.innerWidth < 768) {
+                          size = " (SM)";
+                        } else if (window.innerWidth >= 768 && window.innerWidth < 992) {
+                          size = " (MD)";
+                        } else if (window.innerWidth >= 992 && window.innerWidth < 1200) {
+                          size = " (LG)";
+                        } else if (window.innerWidth >= 1200 && window.innerWidth < 1400) {
+                          size = " (XL)";
+                        } else {
+                          size = " (XXL)";
+                        }
+                        modalLabel.textContent = "Modal Size" + size + "[Test Modal]";
+                      }
+                      window.addEventListener("resize", updateModalSize);
+                      updateModalSize();
+                    }
+                    displayModalSize();
+                  </script>
+                  <button type="button" class="btn-close MC-BTN-CLICK nofocus" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="row g-0">
+                    <div class="col-12 col-md-12 col-xl-4" style="height: 380px">
+                      <div class="container-fluid h-100 w-100 d-flex justify-content-center align-items-center">
+                        <div class="hstack">
+                          <div class="char-Box" id="char-box"></div>
+                          <div class="armorslot">
+                            <div class="vstack">
+                              <div class="slot MC-BTN-CLICK helmet-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                              <div class="slot MC-BTN-CLICK chestplate-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                              <div class="slot MC-BTN-CLICK leggings-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                              <div class="slot MC-BTN-CLICK boots-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                              <div class="slot my-2" style="width: 48px; height: 45px; visibility: hidden;">5</div>
+                              <div class="slot elytra-slot" style="width: 48px; height: 48px; visibility: hidden;">6</div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-xl-8 border border-info p-2" style="height: 380px">asd</div>
+                    <div class="col-12 border border-success" style="height: 200px; max-height: 200px">asd</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div id="MainContent" class="position-absolute vh-100 w-100 z-0">
           <div class="container">
             <div class="vstack d-flex align-items-center pt-5">
@@ -66,7 +128,7 @@
               </div>
               <div class="container-fluid pt-5">
                 <div class="vstack d-flex align-items-center">
-                  <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
+                  <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%" data-bs-toggle="modal" data-bs-target="#Modal-1">
                     <p class="mb-0">About Me</p>
                   </div>
                   <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
@@ -77,7 +139,13 @@
                   </div>
                 </div>
                 <div class="hstack d-flex justify-content-center align-items-center mt-1">
-                  <div class="me-2 mc-btn-sm d-none d-md-block GH-Click MC-BTN-CLICK" style="height: 45px; width: 45px; max-width: 45px" data-tooltip data-title="GitHub" data-body="Visit my GitHub profile.">
+                  <div
+                    class="me-2 mc-btn-sm d-none d-md-block GH-Click MC-BTN-CLICK"
+                    style="height: 45px; width: 45px; max-width: 45px"
+                    data-tooltip
+                    data-title="GitHub"
+                    data-body="Visit my GitHub profile."
+                  >
                     <a class="MC-Btn-text-sm Icon-GitHub"></a>
                   </div>
                   <div class="hstack d-flex justify-content-between" style="width: 100%; max-width: 460px; min-width: none 400px">
@@ -88,16 +156,34 @@
                       <p class="my-2">LinkedIn</p>
                     </div>
                   </div>
-                  <div class="ms-2 mc-btn-sm d-none d-md-block R-Click MC-BTN-CLICK" style="height: 45px; width: 45px; min-width: 45px; max-width: 45px" data-tooltip data-title="Resume" data-body="Download or view my resume.">
+                  <div
+                    class="ms-2 mc-btn-sm d-none d-md-block R-Click MC-BTN-CLICK"
+                    style="height: 45px; width: 45px; min-width: 45px; max-width: 45px"
+                    data-tooltip
+                    data-title="Resume"
+                    data-body="Download or view my resume."
+                  >
                     <a class="MC-Btn-text-sm Icon-Resume"></a>
                   </div>
                 </div>
                 <div class="hstack d-flex justify-content-center align-items-center mt-1 d-md-none">
                   <div class="hstack d-flex justify-content-between" style="width: 100%; max-width: 460px; min-width: none 400px">
-                    <div class="mc-btn-md GH-Click MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px" data-tooltip data-title="GitHub" data-body="Visit my GitHub profile.">
+                    <div
+                      class="mc-btn-md GH-Click MC-BTN-CLICK"
+                      style="height: 45px; width: 200px; min-width: 50px; max-width: 200px"
+                      data-tooltip
+                      data-title="GitHub"
+                      data-body="Visit my GitHub profile."
+                    >
                       <a class="Icon-GitHub Icon-GitHub-down"><p>GitHub</p></a>
                     </div>
-                    <div class="mc-btn-md R-Click MC-BTN-CLICK" style="height: 45px; width: 200px; min-width: 50px; max-width: 200px" data-tooltip data-title="Resume" data-body="Download or view my resume.">
+                    <div
+                      class="mc-btn-md R-Click MC-BTN-CLICK"
+                      style="height: 45px; width: 200px; min-width: 50px; max-width: 200px"
+                      data-tooltip
+                      data-title="Resume"
+                      data-body="Download or view my resume."
+                    >
                       <a class="Icon-Resume Icon-Resume-down"><p>Resume</p></a>
                     </div>
                   </div>
