Refactor inventory setup to enhance item tooltip functionality and improve drag-and-drop interactions; update inventory patterns and item data structure

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                           <div class="hstack">
                             <div class="vstack d-flex justify-content-center align-items-center text-center">
                               <div class="hstack justify-content-center">
-                                <div class="slot slot-inv inv-slot" id="inv-slot-1" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-2" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-3" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-1"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-2"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-3"></div>
                               </div>
                               <div class="hstack justify-content-center">
-                                <div class="slot slot-inv inv-slot" id="inv-slot-4" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-5" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-6" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-4"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-5"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-6"></div>
                               </div>
                               <div class="hstack justify-content-center">
-                                <div class="slot slot-inv inv-slot" id="inv-slot-7" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-8" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
-                                <div class="slot slot-inv inv-slot" id="inv-slot-9" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-7"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-8"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-9"></div>
                               </div>
                             </div>
                             <div class="vstack d-flex justify-content-start align-items-start">
@@ -134,7 +134,7 @@
                                 <div class="slot slot-inv" style="visibility: hidden"></div>
                               </div>
                               <div class="hstack justify-content-start">
-                                <div class="slot slot-inv inv-slot" id="inv-slot-MAIN" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
+                                <div class="slot slot-inv inv-slot" id="inv-slot-MAIN"></div>
                               </div>
                               <div class="hstack justify-content-center">
                                 <div class="slot slot-inv" style="visibility: hidden"></div>
@@ -146,23 +146,23 @@
                           <small class="text-uppercase fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem">Inventory Items</small>
                           <div class="container">
                             <div class="hstack justify-content-center">
-                              <div class="slot slot-inv" id="item-slot-1" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-item-name="Example-1" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-1">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="crafter" />
                               </div>
-                              <div class="slot slot-inv itm-slot" id="item-slot-2" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-item-name="Example-2" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-2">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="Example-2" />
                               </div>
-                              <div class="slot slot-inv itm-slot" id="item-slot-3" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-item-name="book" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-3">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="book" />
                               </div>
-                              <div class="slot slot-inv itm-slot" id="item-slot-4" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-item-name="Example-4" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-4">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="Example-4" />
                               </div>
-                              <div class="slot slot-inv itm-slot" id="item-slot-5" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-item-name="feather" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-5">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="feather" />
                               </div>
-                              <div class="slot slot-inv itm-slot" id="item-slot-6" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-item-name="ink_sac" />
+                              <div class="slot slot-inv itm-slot" id="item-slot-6">
+                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="ink_sac" />
                               </div>
                               <div class="slot slot-inv" style="visibility: hidden"></div>
                               <div class="slot slot-inv slot-btn MC-BTN-CLICK" id="item-slot-clear" data-tooltip data-title="Clear Items" data-body="Clear all Items in the inventory slots.">
